--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-inlinesvg": "^3.0.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
